trunk/Archive2/51/bc4b935764e18e/output
main.cpp: In function ‘int main()’:
main.cpp:31:41: error: conversion from ‘std::tuple<int, float, double, bool, char, short int, int*, float*, double*>’ to non-scalar type ‘main()::<anonymous struct>’ requested
     struct{} _ = my_tuple_cat(t1, t2, t3);
                                         ^
